--- a/01-first-azure-pipeline.yml
+++ b/01-first-azure-pipeline.yml
@@ -22,12 +22,19 @@ jobs:
       echo more information
     displayName: 'Run a multi-line script'
 - job: Job2
-  dependsOn:Job1
+  dependsOn: Job1
   steps:
   - script: echo Job2 -  Hello, world, changed!
     displayName: 'Run a one-line script'
-- job: Job3
-  dependsOn:Job2
+- job: Job1
+  dependsOn: Job2
   steps:
   - script: echo Job3 -  Hello, world, changed!
+    displayName: 'Run a one-line script'
+- job: Job4
+  dependsOn: 
+  - Job2
+  - Job3
+  steps:
+  - script: echo Job4 -  Hello, world, changed!
     displayName: 'Run a one-line script'
