--- a/02-understanding-stages.yml
+++ b/02-understanding-stages.yml
@@ -18,16 +18,21 @@ stages:
      steps:
      - bash: echo Build SecondJob
 - stage: DevDeploy
+  dependsOn: Build
   jobs:
    - job: DevFirstJob
      steps:
      - bash: echo Dev FirstJob
 - stage: QADeploy
+  dependsOn: DevDeploy
   jobs:
    - job: QAFirstJob
      steps:
      - bash: echo QA FirstJob
 - stage: ProdDeploy
+  dependsOn:
+    - DevDeploy
+    - QADeploy
   jobs:
    - job: ProdFirstJob
      steps:
